--- a/styles/style.less
+++ b/styles/style.less
@@ -10,6 +10,11 @@ body {
     margin: 0 auto;
 }
 
+.containerBig {
+    width: 1600px;
+    margin: 0 auto;
+}
+
 .header {
     height: 100px;
     border-bottom: 1px solid #ececec;
@@ -72,10 +77,12 @@ body {
     cursor:pointer;
 }
 
-.headerCart {
+.headerInside a {
     margin-left: auto;
     margin-right: 25px;
+    text-decoration: none;
 }
+
 
 .accountBtn {
     padding: 15px;
@@ -188,7 +195,7 @@ body {
     justify-content: center;
     align-items: center;
     /* Style for "Fetured It" */
-    height: 23px;
+    height: 28px;
     color: #222222;
     font-size: 30px;
     font-weight: 700;
@@ -205,7 +212,7 @@ body {
     justify-content: center;
     align-items: center;
     /* Style for "Shop for i" */
-    height: 12px;
+    height: 15px;
     color: #9f9f9f;
     font-size: 14px;
     font-weight: 400;
@@ -230,11 +237,16 @@ body {
     }
 
 .productBuy {
-    height: 280px;
+    height: 279px;
     width: inherit;
     background: rgba(0, 0, 0, 0.5);
     display: none;
     position: absolute;
+}
+
+.imgProduct {
+    height: 279px;
+    width: inherit;
 }
 
 .productsItems div:hover .productBuy {
@@ -263,16 +275,6 @@ body {
 .productBuy button img {
     margin-right: 10px;
 }
-
-
-
-
-
-
-
-
-
-
 
 .itemsName {
     margin-top: 20px;
@@ -368,8 +370,8 @@ body {
 }
 
 .box {
-    height: 102px;
-    width: 294px;
+    height: 125px;
+    width: 300px;
     margin-left: 36px;
  
 }
@@ -388,7 +390,7 @@ body {
 
 
 .featureBoxText {
-    height: 95px;
+    height: 115px;
     width: 219px;
     margin-left: 78px;
 }
@@ -408,3 +410,603 @@ body {
     letter-spacing: 0.35px;
     margin-top: 17px;
 }
+
+.subscribeWrap {
+    margin-top: 100px;
+    height: 438px;
+    background: url(../images/rectangle.png) no-repeat center bottom, rgba(242,242,242,0.5);
+    background-blend-mode: overlay;
+    background-size: cover;
+}
+
+.subscribe {
+    display: flex;
+    height: inherit;
+}
+
+.reviews, .subscribeRight {
+    width: calc(100% - 1px);
+}
+
+.reviews {
+    display: flex;
+    align-items: center;
+}
+
+.reviewUnit {
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.reviewUnitLeft {
+    width: 83px;
+}
+
+.reviewUnitRight {
+    width: 386px;
+}
+
+.reviewUnitRight blockquote {
+    margin: 0;
+    font-size: 16px;
+    font-style: italic;
+    line-height: 26px;
+    font-weight: 700;
+}
+
+.reviewName {
+    margin-top: 20px;
+    font-size: 16px;
+    font-weight: 700;
+    color: #f16d7f;
+}
+
+.reviewFrom {
+    color: #222224;
+    font-size: 12px;
+    font-weight: 300;
+}
+
+.reviewsSwitch {
+    width: 140px;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+}
+
+.reviewsSwitch div {
+    width: 38px;
+    height: 4px;
+    background-color: #d6d6d6;
+}
+
+.reviewsSwitch div:hover {
+    background-color: #f16d7f;
+    cursor: pointer;
+}
+
+.subscribeDivider {
+    width: 1px;
+    background: #e3e3e3;
+}
+
+.subscribeRight {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.subscribeRightHead {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #222224;
+}
+
+.subscribeRightText {
+    margin: 10px 0 35px;
+}
+
+.subscribeForm {
+    height: 46px;
+}
+
+.subscribeForm input {
+    height: inherit;
+    width: 334px;
+    border: none;
+    outline: none;
+    padding: 0 28px;
+    font-weight: 700;
+    background-color: #e1e1e1;
+    border-top-left-radius: 23px;
+    border-bottom-left-radius: 23px;
+    float: left;
+}
+
+.subscribeForm button {
+    background-color: #f16d7f;
+    border-top-right-radius: 23px;
+    border-bottom-right-radius: 23px;
+    color: white;
+    border: none;
+    height: inherit;
+    padding: 0 20px;
+    outline: none;
+    cursor: pointer;
+}
+
+footer {
+    margin-top: 100px !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+
+.footerBrand {
+    height: 260px;
+    width: 428px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+}
+
+.footerText {
+    font-family: Lato;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 300;
+    letter-spacing: 0.025em;
+    color: #898989;
+}
+
+.footerColumn {
+    height: 260px;
+}
+
+
+.footerColumn h2 {
+    margin: 0 0 35px;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.025em;
+    color: #f16d7f;
+}
+
+.footerColumn a {
+    display: block;
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #898989;
+    text-decoration: none;
+}
+
+.footerColumn a:not(last-child) {
+    margin-bottom: 25px;
+}
+
+.footerColumn a:hover {
+    color: #f16d7f;
+}
+
+.copyright {
+    height: 79px;
+    background-color: #e6e6e6;
+    margin-top: 80px;
+}
+
+.copyrightWrap {
+    height: inherit;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.copyrightRight {
+    font-size: 16px;
+    font-weight: 400;
+    letter-spacing: 0.025em;
+    color: #7a7a7a
+}
+
+.copyrightLeft {
+    width: 191px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.copyrightLeft a {
+    text-decoration: none;
+    color: inherit;
+    
+}
+
+
+.copyrightLeft i{
+    width: 32px;
+    height: 32px;
+    background-color: #ffffff; 
+    color: #b2b2b2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.copyrightLeft i:hover {
+    color: white;
+    background: #f16d7f;
+}
+
+.breadcrumb {
+    height: 148px;
+    background-color: #f8f3f4;
+ 
+}
+
+.breadcrumbWrap {
+    height: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrivals {
+    font-size: 24px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #f16d7f;
+    width: 180px;
+}
+
+.navArrivals {
+    width: 208px;
+}
+
+.navArrivals a{
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: 300;
+    text-transform: uppercase;
+    color: #636363;
+}
+
+.navArrivals a:last-child{
+    font-weight: 700;
+    color: #f16d7f;
+}
+
+.shoppingCart{
+    
+    margin-top: 70px;
+}
+    
+.shoppingGridRow {
+    height: 60px;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: -0.015em;
+    color: #222222;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 1.0px solid #000000;
+}
+
+.shoppingGridRowHead {
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 13px;
+    color: #222222 !important;
+}
+
+.shoppingGridRow > div:first-child{
+  width: 460px;
+}
+
+
+
+.productPrice {
+    width: 78px;
+}
+
+.productQuantity {
+    width: 68px;
+}
+
+.productShipping {
+    width: 62px;
+}
+
+.productSubtotal {
+    width: 66px;
+}
+
+.prodactAction {
+    width: 50px;
+}
+
+.shoppingGridRowProduct {
+    height: 115px;
+    width: inherit;
+    margin-top: 25px;
+    padding-bottom: 25px;
+    border-bottom: 1.0px solid #000000;
+    display: flex;
+    
+}
+
+.product {
+    width: 460px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.productDetails {
+    margin-left: 35px;
+}
+
+.productName {
+    font-size: 13px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #222222;
+    margin-top: 10px;
+    margin-bottom: 35px;
+}
+
+.productColor {
+    font-size: 13px;
+    font-weight: 300;
+    color: #6f6e6e;
+    margin-bottom: 5px;
+}
+
+.productParam {
+    font-weight: 400;
+    color: #575757;
+}
+
+.productSize {
+    font-size: 13px;
+    font-weight: 300;
+    color: #6f6e6e;
+}
+
+.productParam {
+    font-weight: 400;
+    color: #575757;
+}
+
+.productQuantity input {
+    width: 54px;
+    border: 1px solid #eaeaea;
+    text-align: center;
+    height: 30px;
+}
+
+.productQuality {
+    width: 680px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.productQuality div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.productQualityText > div:not(last-child){
+    font-size: 13px;
+    font-weight: 400;
+    color: #656565;
+}
+
+.productQualityText > div:last-child {
+    color: #c0c0c0;
+}
+
+.shoppingBtnsWrap {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 44px;
+}
+
+.shoppingBtnsWrap button {
+    padding: 20px 40px;
+    border: 1px solid #eaeaea;
+    background-color: #ffffff;
+    color: #4a4a4a;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.checkOutWrap {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 63px;
+    align-items: flex-start;
+}
+
+.shippingAddressWrap {
+    width: 355px;
+}
+
+.shippingAddressWrap h2 {
+    margin-top: 0;
+    margin-bottom: 22px;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+.shippingAddressWrap select, .shippingAddressWrap input {
+    height: 45px;
+    border: 1px solid #eaeaea;
+    background-color: #ffffff;
+    width: 100%;
+    color: #b1b1b1;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 13px;
+    font-family: inherit;
+    outline: none;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+}
+
+.shippingAddressWrap input::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #b1b1b1;
+}
+
+.shippingAddressWrap input::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #b1b1b1;
+}
+
+.shippingAddressWrap input:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #b1b1b1;
+}
+
+.shippingAddressWrap input:-moz-placeholder {
+    /* Firefox 18- */
+    color: #b1b1b1;
+}
+
+.shippingAddressWrap button {
+    padding: 12px 15px;
+    border: 1px solid #eaeaea;
+    background: white;
+    font-family: inherit;
+    text-transform: uppercase;
+    color: #4a4a4a;
+    font-weight: 700;
+    font-size: 11px;
+}
+
+.couponDiscountWrap {
+    width: 355px;
+}
+
+.couponDiscountWrap h2 {
+    margin-top: 0;
+    margin-bottom: 22px;
+    text-transform: uppercase;
+    font-size: 16px;
+}
+
+.couponDiscountWrap label {
+    display: block;
+    color: #000000;
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 24px;
+}
+
+.couponDiscountWrap input {
+    height: 45px;
+    border: 1px solid #eaeaea;
+    background-color: #ffffff;
+    width: 100%;
+    color: #b1b1b1;
+    font-size: 13px;
+    font-weight: 300;
+    padding: 13px;
+    font-family: inherit;
+    outline: none;
+    box-sizing: border-box;
+    margin-bottom: 25px;
+}
+
+.couponDiscountWrap input::-webkit-input-placeholder {
+    /* Chrome/Opera/Safari */
+    color: #b1b1b1;
+}
+
+.couponDiscountWrap input::-moz-placeholder {
+    /* Firefox 19+ */
+    color: #b1b1b1;
+}
+
+.couponDiscountWrap input:-ms-input-placeholder {
+    /* IE 10+ */
+    color: #b1b1b1;
+}
+
+.couponDiscountWrap input:-moz-placeholder {
+    /* Firefox 18- */
+    color: #b1b1b1;
+}
+
+.couponDiscountWrap button {
+    padding: 12px 15px;
+    border: 1px solid #eaeaea;
+    background: white;
+    font-family: inherit;
+    text-transform: uppercase;
+    color: #4a4a4a;
+    font-weight: 700;
+    font-size: 11px;
+}
+
+.grandTotalWrap {
+    width: 360px;
+    background-color: #f5f3f3;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+.grandTotalSub {
+    margin-bottom: 14px;
+    color: #4a4a4a;
+    font-size: 11px;
+    font-weight: 400;
+    text-transform: uppercase;
+    text-align: right;
+}
+
+.grandTotalSub span:last-child {
+    margin-left: 15px;
+}
+
+.grandTotalGrand {
+    text-align: right;
+    color: #222222;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-bottom: 22px;
+    border-bottom: 1px solid #e2e2e2;
+    margin-bottom: 17px;
+}
+
+.grandTotalGrand span:last-child {
+    color: #f16d7f;
+    margin-left: 20px;
+}
+
+.grandTotalWrap button {
+    width: 100%;
+    background-color: #f16d7f;
+    padding: 20px 38px;
+    text-align: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 700;
+    border: none;
+}
+
+
+
