Update layout Product

--- a/styles/styleProduct.css
+++ b/styles/styleProduct.css
@@ -11266,7 +11266,7 @@ footer {
   color: #636363;
 }
 
-.navArrivals a::nth-child-child-child {
+.navArrivals a:last-child {
   font-weight: 700;
   color: #f16d7f;
 }
@@ -11631,7 +11631,7 @@ footer {
   color: #ef5b70;
   border-bottom: 1px solid #ebebeb;
   cursor: pointer;
-  background: url(../images/caret-down-solid.svg) repeat-repeat right 5px center;
+  background: url(../images/caret-down-solid.svg) no-repeat right 5px center;
   background-size: 10px;
 }
 
@@ -11687,7 +11687,7 @@ footer {
   display: inline-block;
   width: 13px;
   height: 13px;
-  background: url(../images/checkbox.png) repeat-repeat;
+  background: url(../images/checkbox.png) no-repeat;
 }
 
 .sizesWrap > div input[type="checkbox"] {
@@ -11695,7 +11695,7 @@ footer {
 }
 
 .sizesWrap > div input[type="checkbox"]:checked + .productsCheckbox {
-  background: url(../images/checkbox.png) repeat-repeat, url(../images/check-solid.svg) repeat-repeat;
+  background: url(../images/checkbox.png) no-repeat, url(../images/check-solid.svg) no-repeat;
   background-size: contain, 12px;
   background-blend-mode: multiply;
 }
